[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livetennisapi"
version = "1.0.0"
description = "Official Python client for the Live Tennis API — real-time tennis scores, players, market prices and model win-probability over REST and WebSocket."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Live Tennis API", email = "support@livetennisapi.com" }]
keywords = [
    "tennis", "tennis-api", "live-scores", "sports", "sports-api",
    "sports-data", "atp", "wta", "itf", "odds", "api-client", "sdk",
    "websocket", "real-time",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24,<1",
]

[project.optional-dependencies]
ws = ["websockets>=12"]
cli = ["rich>=13"]
all = ["websockets>=12", "rich>=13"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "websockets>=12",
    "rich>=13",
]

[project.scripts]
livetennis = "livetennisapi.cli:main"

[project.urls]
Homepage = "https://livetennisapi.com"
Documentation = "https://docs.livetennisapi.com"
Repository = "https://github.com/livetennisapi/livetennisapi-python"
Issues = "https://github.com/livetennisapi/livetennisapi-python/issues"
Changelog = "https://github.com/livetennisapi/livetennisapi-python/blob/main/CHANGELOG.md"
Pricing = "https://livetennisapi.com/#pricing"

[tool.hatch.build.targets.wheel]
packages = ["src/livetennisapi"]

[tool.hatch.build.targets.sdist]
include = ["src/livetennisapi", "README.md", "LICENSE", "CHANGELOG.md", "tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008", "SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "contract: hits the live API; skipped unless LIVETENNISAPI_KEY is set",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
ignore_missing_imports = true
